<resources>
    <string name="app_name">Ico Lamp</string>
    <string name="main_label_text">RGB Sliders</string>
    <string name="connect_text">Connect</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="button_red_text">Red</string>
    <string name="button_blue_text">Blue</string>
    <string name="button_green_text">Green</string>
    <string name="button_warm_white_text">Warm</string>
    <string name="button_cold_white_text">Cold</string>
    <string name="button_bright_white_text">Bright</string>
    <string name="button_off_text">Off</string>
    <string name="button_add_to_animation">To Anim</string>
    <string name="button_start_animation">Start</string>
    <string name="switch_start_animation">Animation On</string>

    <string name="bt_switch_on">Switching on Bluetooth</string>
    <string name="bt_discovered_device">Discovered %1$s</string>
    <string name="bt_radio_on">Bluetooth radio on</string>
    <string name="bt_discovery">Discovering..</string>
    <string name="bt_disconnected">Disconnected</string>
    <string name="bt_connected">Connected!</string>
    <string name="bt_connecting">Connecting</string>
    <string name="bt_btn_connect">Connect</string>
    <string name="bt_btn_disconnect">Disconnect</string>
    <string name="bt_timeout">Connection Timeout</string>
    <string name="bt_connection_error">Connection Error</string>

    <string name="lbl_lower">Lower</string>
    <string name="lbl_upper">Upper</string>

    <string name="navig_color_select">Color Select</string>
    <string name="navig_animation">Animation</string>

    <string name="tv_anim_descr">Total Length: %1$s, Size: %2$s bytes</string>
    <string name="cs_duration">%1$2f</string>

    <string name="napa_alert_duration_title">Butbut</string>
    <string name="napa_alert_duration_message">Ey bubut eyy sie haben ned geseikket wie lange tut geyyen</string>
    <string name="napa_alert_duration_ok">Good</string>

    <string name="save_animation">Save</string>

    <string name="animation_name_default">CoolAnimation</string>
    <string name="saved_animation_save_as_new">Save As New</string>
    <string name="saved_animation_set_name">Name of the stored Animation</string>

    <string name="alert_dialog_really_delete">really delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saved_animation_duration">Duration: %.2f</string>
    <string name="saved_animation_frames">Frames: %d</string>
    <string name="saved_animation_launched">Animation launched</string>
</resources>