<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentColorSelect"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        tools:context=".fragments.ColorSelect">

        <SeekBar
            android:id="@+id/amountRed"
            android:layout_width="312dp"
            android:layout_height="17dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="49dp"
            android:max="255"
            android:progressBackgroundTint="@color/lamp_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/amountGreen"
            android:layout_width="312dp"
            android:layout_height="17dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="49dp"
            android:max="255"
            android:progressBackgroundTint="@color/lamp_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountRed" />

        <SeekBar
            android:id="@+id/amountBlue"
            android:layout_width="312dp"
            android:layout_height="17dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="50dp"
            android:max="255"
            android:progressBackgroundTint="@color/lamp_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountGreen" />


        <TextView
            android:id="@+id/textViewConnectionState"
            android:layout_width="184dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangles"
            android:gravity="center"
            android:shadowColor="#734343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountBlue" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="142dp"
            android:layout_height="51dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:text="@string/connect_text"
            app:layout_constraintStart_toEndOf="@+id/textViewConnectionState"
            app:layout_constraintTop_toBottomOf="@+id/amountBlue" />

        <TextView
            android:id="@+id/serialOut"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/console_bg"
            android:padding="6.2dp"
            android:scrollbars="vertical"
            android:textSize="10sp"
            android:typeface="monospace"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDuration" />

        <LinearLayout
            android:id="@+id/lampSelectors"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnConnect">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLblUpper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lbl_upper"
                    app:layout_constraintBottom_toTopOf="@+id/lampSelectorUpper"
                    app:layout_constraintStart_toStartOf="@+id/lampSelectorUpper" />

                <ch.sr35.balllampapp.LampSelectorView
                    android:id="@+id/lampSelectorUpper"
                    android:layout_width="169dp"
                    android:layout_height="157dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:mappingTable="@array/lampMappingUpper" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLblLower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lbl_lower" />

                <ch.sr35.balllampapp.LampSelectorView
                    android:id="@+id/lampSelectorLower"
                    android:layout_width="169dp"
                    android:layout_height="157dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/amountBlue" />
            </LinearLayout>
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lampSelectors"
            android:id="@+id/tableColorButtons"
            >
            <TableRow>
                <Button
                    android:id="@+id/buttonRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/lamp_red"
                    android:text="@string/button_red_text"
                    android:textColor="#9CFFA0"
                 />

                <Button
                    android:id="@+id/buttonGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/lamp_green"
                    android:text="@string/button_green_text"
                    android:textColor="#000000"
                 />

                <Button
                    android:id="@+id/buttonBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/lamp_blue"
                    android:text="@string/button_blue_text"
                />
                <Button
                    android:id="@+id/buttonOff"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="0dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/button_off_text"
                />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/buttonWarmWhite"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/lamp_war_white"
                    android:text="@string/button_warm_white_text"
                    android:textColor="#FF000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonRed" />

                <Button
                    android:id="@+id/buttonColdWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/lamp_cold_white"
                    android:text="@string/button_cold_white_text"
                    android:textColor="#FF000000"
                    app:layout_constraintStart_toEndOf="@+id/buttonWarmWhite"
                    app:layout_constraintTop_toBottomOf="@+id/buttonGreen" />

                <Button
                    android:id="@+id/buttonBrightWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/lamp_bright"
                    android:text="@string/button_bright_white_text"
                    android:textColor="#FF000000"
                    app:layout_constraintStart_toEndOf="@+id/buttonColdWhite"
                    app:layout_constraintTop_toBottomOf="@+id/buttonBlue" />
            </TableRow>
        </TableLayout>


        <Button
            android:id="@+id/add_to_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_add_to_animation"
            app:layout_constraintBottom_toTopOf="@+id/serialOut"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextDuration"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="60dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableColorButtons" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
